// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiBreadcrumbs is rendered 1`] = `
<nav
  aria-label="aria-label"
  class="euiBreadcrumbs testClass1 testClass2 euiBreadcrumbs--truncate"
  data-test-subj="test subject string"
>
  <a
    class="euiLink euiLink--subdued euiBreadcrumb customClass"
    data-test-subj="breadcrumbsAnimals"
    href="#"
    rel="noreferrer"
  >
    Animals
  </a>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="euiBreadcrumb"
  >
    Metazoans
  </span>
  <div
    class="euiBreadcrumbSeparator"
  />
  <div
    class="euiPopover euiPopover--anchorDownCenter euiBreadcrumb euiBreadcrumb--collapsed"
  >
    <div
      class="euiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="euiLink euiLink--subdued euiBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <div
          data-euiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <a
    class="euiLink euiLink--subdued euiBreadcrumb euiBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props max doesn't break when max exceeds the number of breadcrumbs 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate"
>
  <a
    class="euiLink euiLink--subdued euiBreadcrumb customClass"
    data-test-subj="breadcrumbsAnimals"
    href="#"
    rel="noreferrer"
  >
    Animals
  </a>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="euiBreadcrumb"
  >
    Metazoans
  </span>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="euiBreadcrumb"
  >
    Chordates
  </span>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="euiBreadcrumb euiBreadcrumb--truncate"
  >
    Nebulosa subspecies is also a real mouthful, especially for creatures without mouths
  </span>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="euiBreadcrumb"
  >
    Tetrapods
  </span>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <a
    class="euiLink euiLink--subdued euiBreadcrumb euiBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props max renders 1 item 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate"
>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiBreadcrumb euiBreadcrumb--collapsed"
  >
    <div
      class="euiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="euiLink euiLink--subdued euiBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <div
          data-euiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props max renders all items with null 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate"
>
  <a
    class="euiLink euiLink--subdued euiBreadcrumb customClass"
    data-test-subj="breadcrumbsAnimals"
    href="#"
    rel="noreferrer"
  >
    Animals
  </a>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="euiBreadcrumb"
  >
    Metazoans
  </span>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="euiBreadcrumb"
  >
    Chordates
  </span>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="euiBreadcrumb euiBreadcrumb--truncate"
  >
    Nebulosa subspecies is also a real mouthful, especially for creatures without mouths
  </span>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="euiBreadcrumb"
  >
    Tetrapods
  </span>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <a
    class="euiLink euiLink--subdued euiBreadcrumb euiBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props responsive is rendered 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate"
>
  <a
    class="euiLink euiLink--subdued euiBreadcrumb customClass"
    data-test-subj="breadcrumbsAnimals"
    href="#"
    rel="noreferrer"
  >
    Animals
  </a>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="euiBreadcrumb"
  >
    Metazoans
  </span>
  <div
    class="euiBreadcrumbSeparator"
  />
  <div
    class="euiPopover euiPopover--anchorDownCenter euiBreadcrumb euiBreadcrumb--collapsed"
  >
    <div
      class="euiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="euiLink euiLink--subdued euiBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <div
          data-euiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <a
    class="euiLink euiLink--subdued euiBreadcrumb euiBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props responsive is rendered as false 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate"
>
  <a
    class="euiLink euiLink--subdued euiBreadcrumb customClass"
    data-test-subj="breadcrumbsAnimals"
    href="#"
    rel="noreferrer"
  >
    Animals
  </a>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="euiBreadcrumb"
  >
    Metazoans
  </span>
  <div
    class="euiBreadcrumbSeparator"
  />
  <div
    class="euiPopover euiPopover--anchorDownCenter euiBreadcrumb euiBreadcrumb--collapsed"
  >
    <div
      class="euiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="euiLink euiLink--subdued euiBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <div
          data-euiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <a
    class="euiLink euiLink--subdued euiBreadcrumb euiBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props responsive is rendered with custom breakpoints 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs euiBreadcrumbs--truncate"
>
  <div
    class="euiPopover euiPopover--anchorDownCenter euiBreadcrumb euiBreadcrumb--collapsed"
  >
    <div
      class="euiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="euiLink euiLink--subdued euiBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <div
          data-euiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;

exports[`EuiBreadcrumbs props truncate as false is rendered 1`] = `
<nav
  aria-label="breadcrumb"
  class="euiBreadcrumbs"
>
  <a
    class="euiLink euiLink--subdued euiBreadcrumb customClass"
    data-test-subj="breadcrumbsAnimals"
    href="#"
    rel="noreferrer"
  >
    Animals
  </a>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="false"
    class="euiBreadcrumb"
  >
    Metazoans
  </span>
  <div
    class="euiBreadcrumbSeparator"
  />
  <div
    class="euiPopover euiPopover--anchorDownCenter euiBreadcrumb euiBreadcrumb--collapsed"
  >
    <div
      class="euiPopover__anchor"
    >
      <button
        aria-label="Show collapsed breadcrumbs"
        class="euiLink euiLink--subdued euiBreadcrumb__collapsedLink"
        title="Show collapsed breadcrumbs"
        type="button"
      >
        … 
        <div
          data-euiicon-type="arrowDown"
        />
      </button>
    </div>
  </div>
  <div
    class="euiBreadcrumbSeparator"
  />
  <button
    class="euiLink euiLink--subdued euiBreadcrumb"
    type="button"
  >
    Reptiles
  </button>
  <div
    class="euiBreadcrumbSeparator"
  />
  <a
    class="euiLink euiLink--subdued euiBreadcrumb euiBreadcrumb--truncate"
    href="#"
    rel="noreferrer"
  >
    Boa constrictor
  </a>
  <div
    class="euiBreadcrumbSeparator"
  />
  <span
    aria-current="page"
    class="euiBreadcrumb euiBreadcrumb--last"
  >
    Edit
  </span>
</nav>
`;
